--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Alkatra&family=Fasthand&display=swap');
     </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Alkatra&family=Fasthand&family=Moul&display=swap" rel="stylesheet">
     <!-- custom css-->
     <link rel="stylesheet" href="style.css">
 </head>
